# hackumass-2024

./: .gitignore  collect.py  dataset.py  hackUmass.ino  metadata.jsonl  object_detection.ipynb  process.py  pyproject.toml  run_model.py  test.ipynb  test3.ipynb  uploadds.py
images/: metadata.jsonl
